# kde-dolphin-peparse

./: CMakeLists.txt  hello-dolphin-plugin.json  helloworld.kdev4
src/: hello-dolphin-plugin.cpp  hello-dolphin-plugin.h  pe-parser-wrapper.cpp  pe-parser-wrapper.h
